# indigo

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cmakelists.txt  main.cpp  opt.hpp
arm_code/: arm.cpp  arm.hpp  regmanager.hpp
backend/: README.md  backend.cpp  backend.hpp
backend/codegen/: align_code.cpp  align_code.hpp  bb_rearrange.cpp  bb_rearrange.hpp  codegen.cpp  codegen.hpp  err.hpp  instruction_schedule.cpp  instruction_schedule.hpp  math_opt.cpp  math_opt.hpp  reg_alloc.cpp  reg_alloc.hpp
backend/mir/: mir.hpp
backend/optimization/: algebraic_simplification.hpp  arm_peephole.hpp  block_merge.hpp  cast_inst.hpp  check.hpp  common_expression_delete.hpp  complex_dead_code_elimination.cpp  complex_dead_code_elimination.hpp  const_loop_expand.cpp  const_loop_expand.hpp  const_merge.hpp  const_propagation.hpp  cycle.hpp  define_use_opt.hpp  excess_reg_delete.cpp  excess_reg_delete.hpp  exit_ahead.cpp  exit_ahead.hpp  func_array_global.cpp  func_array_global.hpp  global_expression_move.hpp  global_var_to_local.cpp  global_var_to_local.hpp  graph_color.hpp  init_end_block.cpp  init_end_block.hpp  inline.hpp  instruction_schedule.cpp  instruction_schedule.hpp  livevar_analyse.hpp  loop_unroll.cpp  loop_unroll.hpp  loop_unrolling.cpp  loop_unrolling.hpp  memvar_propagation.hpp  mla.cpp  mla.hpp  optimization.hpp  phi_merge.hpp  ref_count.hpp  (+7 more)
backend/optimiziation/: define_use_opt.hpp  graph_color.hpp  livevar_analyse.hpp  optimiziation.hpp
frontend/: README.md  const_prop.cpp  const_prop.hpp  express_node.cpp  express_node.hpp  ir_generator.cpp  ir_generator.hpp  optim_mir.cpp  optim_mir.hpp  symbol.cpp  symbol.hpp  symbol_table.cpp  symbol_table.hpp  syntax_analyze.cpp  syntax_analyze.hpp  word_analyze.cpp  word_analyze.hpp
frontend/optimization/: bmir_optimization.cpp  bmir_optimization.hpp  bmir_variable_table.hpp  scalize_fake_var_array.hpp
include/: aixlog.hpp
include/argparse/: argparse.hpp
mir/: README.md  mir.cpp  mir.hpp  ty.hpp
prelude/: fake_mir_generate.hpp  prelude.hpp
scripts/: speed_compare.py  test.py
test_codes/digui2/: digui2.in  digui2.sy
test_codes/performance_test/: 00_bitset1.sy  01_mm3.c  02_mv1.c  03_sort1.sy  03_sort2.c  04_spmv2.c  mv_new.in  mv_new.out  mv_new.sy
test_codes/sysyruntimelibrary/: stdlib.c
test_codes/upload/BigIntAdd/: bigintadd copy.in  bigintadd copy.out  bigintadd copy.sy  bigintadd.out
test_codes/upload/BigIntDiv/: bigintdiv.in  bigintdiv.out
test_codes/upload/BigIntMul/: bigintmul.in  bigintmul.out  bigintmul.sy
test_codes/upload/BigIntSub/: bigintsub.in  bigintsub.out  bigintsub.sy
test_codes/upload/bin_search/: bin_search.in  bin_search.out  bin_search.sy  binary_search2.in  binary_search2.sy
test_codes/upload/binary_search/binary_search/: binary_search.in  binary_search.sy
test_codes/upload/bubble_sort/: bubble_sort.sy
test_codes/upload/conv2d/: conv2d.out  conv2d.sy  conv2d.sy.bak
test_codes/upload/crx/: testcase.in  testcase.out  testcase.sy
test_codes/upload/digui1/: digui1.in  digui1.out  digui1.sy
test_codes/upload/digui2/: digui2.in  digui2.out  digui2.sy
test_codes/upload/digui3/: digui3.in  digui3.out  digui3.sy
test_codes/upload/flower/: flower.in  flower.out  flower.sy
test_codes/upload/full_permutation/: full_permutation.out  full_permutation.sy
test_codes/upload/gcd/: gcd.in  gcd.out  gcd.sy
test_codes/upload/heap_sort/: heap_sort.in  heap_sort.sy
test_codes/upload/insert_sort/: insert_sort.out  insert_sort.sy
test_codes/upload/linear_search/: line_search.out  line_search.sy  ls copy.in  ls copy.sy  ls.in
test_codes/upload/many_local_var/: many_local_var.sy
test_codes/upload/many_param/: many_param.sy
test_codes/upload/matrix/: matrix-1.in  matrix-1.out  matrix-1.sy  matrix-1_2.in  matrix-1_2.out
test_codes/upload/matrix_matrix/: matrix_matrix.in  matrix_matrix.out  matrix_matrix.sy
test_codes/upload/matrix_tran/: matrix_tran.out  matrix_tran.sy
test_codes/upload/matrix_vector/: matrix_vector.in  matrix_vector.out  matrix_vector.sy
test_codes/upload/merge_sort/: merge_sort.in  merge_sort.out  merge_sort.sy
test_codes/upload/merge_sort_xunhuan/: merge_sort_xunhuan.sy
test_codes/upload/quick_sort/: quick_sort.sy
test_codes/upload/recursive_sqrt/: sqrt_recursion.in  sqrt_recursion.out  sqrt_recursion.sy
test_codes/upload/rynco/: decbinoct.in  decbinoct.out  decbinoct.sy  gcd_iterative.sy  gcd_recursive.in  gcd_recursive.sy
test_codes/upload/select_sort/: select_sort.sy
test_codes/upload/shell_sort/: shell_sort.out  shell_sort.sy
test_codes/upload/test_array/: test_array.in  test_array.out  test_array.sy  test_array_C.c
test_codes/upload/testcases/: matrix_det_1.in  matrix_det_1.out  matrix_det_1.sy  matrix_det_2.in  matrix_det_2.out  matrix_rank_1.in  matrix_rank_1.out  matrix_rank_1.sy  matrix_rank_2.out  matrix_rank_2.sy  test1.sy  test1_1.out  test1_1.sy  test1_2.out  test2_1.in  test2_1.out  test2_2.in  test2_2.out  test2_2.sy  test3_1.in  test3_1.out  test3_2.in  test3_2.out  test3_2.sy  test4_1.out  test4_1.sy  test5_1.in  test5_1.out  test5_1.sy  test5_2.in  test5_2.out  test5_2.sy
